--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href = "1.html ">HTML</a></li>
       <li><a href = "2.html ">CSS</a></li>
       <li><a href = "3.html ">Javascript</a></li>
+      <li><a href = "webserver.html ">웹서버</a></li>
     </ol>
 
   <h1>html</h1>
@@ -123,13 +124,6 @@
     <li> code라는 태그 안에 &와 lt;p와 &와 gt;를 순서대로 써준다. </li>
   </ol>
 
-  <h1>server와 client</h1>
-  <li>server : 서비스를 제공(response)하는 대상</li>
-  <li>client : 고객, 서비스를 요청(request)하는 대상</li>
 
-
-  <h1>web hosting : Github</h1>
-  <li>for free, making open source all of the world</li>
-  <li>sing in : 회원가입, sign up : 로그 , repository : 저장공간</li>
 </body>
 </html>
